--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         Fleet Management Login Page
     </h2>
     <div>
-        <input type="email" placeholder="Enter the email" required>
+        <input type="email" placeholder="Enter the email" required> <br>
+        <br>
         <input type="password" placeholder="Enter the password" required>
     </div>
 </body>
