--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         <input type="email" placeholder="Enter the email" required> <br>
         <br>
         <input type="password" placeholder="Enter the password" required>
+        <br><br>
+        <button>
+            Login
+        </button>
     </div>
+    <script>
+        const VALID_EMAIL = "admin@gmail.com"
+        const VALID_PASSWORD = "admin1234"
+    </script>
 </body>
 </html>
