--- a/admin.html
+++ b/admin.html
@@ -6,11 +6,26 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
+    <header class="navbar">
+        <div class="navbar_title">
+            Fleet Management Admin
+        </div>
+        <select id="filter-category" placeholder="All category">
+            <option value="All"> All </option>
+             <option value="Auto"> Auto </option>
+              <option value="Car"> Car </option>
+               <option value="Truck"> Truck </option>
+                <option value="Bus"> Bus </option>
+
+        </select>
+
+        <select id="filter-availability"></select>
+    </header>
   <!---side bar--->
   <aside>
     <h2>Add Fleet</h2>
     <input type = "text" placeholder="Regd no of vehile">
-    <select id="category">
+    <select id="category" placeholder="Select Category">
         <option value = "select"> Select category </option>
         <option value = "Auto"> Auto </option>
         <option value = "Car"> Car </option>
