--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+    <style>
+        .navbar{
+            background-color: aqua;
+            padding: 10px 20px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+    </style>
 </head>
 <body>
     <header class="navbar">
@@ -125,7 +136,7 @@ function renderCards() {
 
         updateBtn.addEventListener("click", function(){
             const newName = prompt("Enter new driver name");
-            
+
         }
 
     }
